# drama-web-crawler

./: .dockerignore  .env.example  .env.sample  .env.test  .gitignore  Dockerfile  README.md  deploy-test.sh  docker-compose.test.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
docs/: 接口文档.md  海外站点数据维度可行性分析.md  项目技术文档.md
src/: __init__.py
src/api/: app.py
src/config/: audience_type_map.json
src/core/: __init__.py  base.py  curl_http.py  export.py  http.py  interpolate_dates.py  logging.py  models.py  normalize.py  settings.py  storage.py
src/jobs/: daily_crawl.py  scheduler.py
src/spiders/: __init__.py  registry.py
src/spiders/dramabox/: __init__.py  crawler.py
src/spiders/netshort/: __init__.py  crawler.py
src/spiders/reelshort/: __init__.py  crawler.py
src/spiders/shortmax/: __init__.py  crawler.py
